--- a/cli/meson.build
+++ b/cli/meson.build
@@ -26,10 +26,11 @@ sources = files(
   'mmcli-sms.c',
 )
 
-deps = [
-  gudev_dep,
-  libmm_glib_dep,
-]
+deps = [libmm_glib_dep]
+
+if enable_udev
+  deps += gudev_dep
+endif
 
 executable(
   'mmcli',
