libmm-glib: new helper to handle the 5GNR registration settings

--- a/libmm-glib/Makefile.am
+++ b/libmm-glib/Makefile.am
@@ -99,6 +99,8 @@ libmm_glib_la_SOURCES = \
 	mm-3gpp-profile.c \
 	mm-signal-threshold-properties.h \
 	mm-signal-threshold-properties.c \
+	mm-nr5g-registration-settings.h \
+	mm-nr5g-registration-settings.c \
 	mm-compat.h \
 	mm-compat.c \
 	$(NULL)
