--- a/libmm-glib/meson.build
+++ b/libmm-glib/meson.build
@@ -42,6 +42,7 @@ headers = files(
   'mm-modem-time.h',
   'mm-modem-voice.h',
   'mm-network-timezone.h',
+  'mm-nr5g-registration-settings.h',
   'mm-object.h',
   'mm-pco.h',
   'mm-signal.h',
@@ -96,6 +97,7 @@ sources = files(
   'mm-modem-time.c',
   'mm-modem-voice.c',
   'mm-network-timezone.c',
+  'mm-nr5g-registration-settings.c',
   'mm-object.c',
   'mm-pco.c',
   'mm-signal.c',
