--- a/libmm-glib/meson.build
+++ b/libmm-glib/meson.build
@@ -16,6 +16,7 @@ headers = files(
   'mm-call.h',
   'mm-call-properties.h',
   'mm-cdma-manual-activation-properties.h',
+  'mm-cell-info.h',
   'mm-compat.h',
   'mm-firmware-properties.h',
   'mm-firmware-update-settings.h',
@@ -71,6 +72,7 @@ sources = files(
   'mm-call.c',
   'mm-call-properties.c',
   'mm-cdma-manual-activation-properties.c',
+  'mm-cell-info.c',
   'mm-common-helpers.c',
   'mm-compat.c',
   'mm-firmware-properties.c',
