--- a/libmm-glib/meson.build
+++ b/libmm-glib/meson.build
@@ -17,6 +17,7 @@ headers = files(
   'mm-call-properties.h',
   'mm-cdma-manual-activation-properties.h',
   'mm-cell-info.h',
+  'mm-cell-info-cdma.h',
   'mm-compat.h',
   'mm-firmware-properties.h',
   'mm-firmware-update-settings.h',
@@ -73,6 +74,7 @@ sources = files(
   'mm-call-properties.c',
   'mm-cdma-manual-activation-properties.c',
   'mm-cell-info.c',
+  'mm-cell-info-cdma.c',
   'mm-common-helpers.c',
   'mm-compat.c',
   'mm-firmware-properties.c',
