libmm-glib,cell-info-gsm: new 'MMCellInfoGsm' object
Implementing support for GSM cell info.

--- a/libmm-glib/meson.build
+++ b/libmm-glib/meson.build
@@ -18,6 +18,7 @@ headers = files(
   'mm-cdma-manual-activation-properties.h',
   'mm-cell-info.h',
   'mm-cell-info-cdma.h',
+  'mm-cell-info-gsm.h',
   'mm-compat.h',
   'mm-firmware-properties.h',
   'mm-firmware-update-settings.h',
@@ -75,6 +76,7 @@ sources = files(
   'mm-cdma-manual-activation-properties.c',
   'mm-cell-info.c',
   'mm-cell-info-cdma.c',
+  'mm-cell-info-gsm.c',
   'mm-common-helpers.c',
   'mm-compat.c',
   'mm-firmware-properties.c',
