--- a/libmm-glib/meson.build
+++ b/libmm-glib/meson.build
@@ -19,6 +19,7 @@ headers = files(
   'mm-cell-info.h',
   'mm-cell-info-cdma.h',
   'mm-cell-info-gsm.h',
+  'mm-cell-info-umts.h',
   'mm-compat.h',
   'mm-firmware-properties.h',
   'mm-firmware-update-settings.h',
@@ -77,6 +78,7 @@ sources = files(
   'mm-cell-info.c',
   'mm-cell-info-cdma.c',
   'mm-cell-info-gsm.c',
+  'mm-cell-info-umts.c',
   'mm-common-helpers.c',
   'mm-compat.c',
   'mm-firmware-properties.c',
