libmm-glib,cell-info-tdscdma: new 'MMCellInfoTdscdma' object
Implementing support for TDSCDMA cell info.

--- a/libmm-glib/Makefile.am
+++ b/libmm-glib/Makefile.am
@@ -109,6 +109,8 @@ libmm_glib_la_SOURCES = \
 	mm-cell-info-gsm.c \
 	mm-cell-info-umts.h \
 	mm-cell-info-umts.c \
+	mm-cell-info-tdscdma.h \
+	mm-cell-info-tdscdma.c \
 	mm-compat.h \
 	mm-compat.c \
 	$(NULL)
@@ -192,6 +194,7 @@ include_HEADERS = \
 	mm-cell-info-cdma.h \
 	mm-cell-info-gsm.h \
 	mm-cell-info-umts.h \
+	mm-cell-info-tdscdma.h \
 	mm-compat.h \
 	$(NULL)
 
