libmm-glib,cell-info-lte: new 'MMCellInfoLte' object
Implementing support for LTE cell info.

--- a/libmm-glib/Makefile.am
+++ b/libmm-glib/Makefile.am
@@ -111,6 +111,8 @@ libmm_glib_la_SOURCES = \
 	mm-cell-info-umts.c \
 	mm-cell-info-tdscdma.h \
 	mm-cell-info-tdscdma.c \
+	mm-cell-info-lte.h \
+	mm-cell-info-lte.c \
 	mm-compat.h \
 	mm-compat.c \
 	$(NULL)
@@ -195,6 +197,7 @@ include_HEADERS = \
 	mm-cell-info-gsm.h \
 	mm-cell-info-umts.h \
 	mm-cell-info-tdscdma.h \
+	mm-cell-info-lte.h \
 	mm-compat.h \
 	$(NULL)
 
