--- a/libmm-glib/meson.build
+++ b/libmm-glib/meson.build
@@ -19,6 +19,7 @@ headers = files(
   'mm-cell-info.h',
   'mm-cell-info-cdma.h',
   'mm-cell-info-gsm.h',
+  'mm-cell-info-lte.h',
   'mm-cell-info-tdscdma.h',
   'mm-cell-info-umts.h',
   'mm-compat.h',
@@ -79,6 +80,7 @@ sources = files(
   'mm-cell-info.c',
   'mm-cell-info-cdma.c',
   'mm-cell-info-gsm.c',
+  'mm-cell-info-lte.c',
   'mm-cell-info-tdscdma.c',
   'mm-cell-info-umts.c',
   'mm-common-helpers.c',
