--- a/libmm-glib/meson.build
+++ b/libmm-glib/meson.build
@@ -20,6 +20,7 @@ headers = files(
   'mm-cell-info-cdma.h',
   'mm-cell-info-gsm.h',
   'mm-cell-info-lte.h',
+  'mm-cell-info-nr5g.h',
   'mm-cell-info-tdscdma.h',
   'mm-cell-info-umts.h',
   'mm-compat.h',
@@ -81,6 +82,7 @@ sources = files(
   'mm-cell-info-cdma.c',
   'mm-cell-info-gsm.c',
   'mm-cell-info-lte.c',
+  'mm-cell-info-nr5g.c',
   'mm-cell-info-tdscdma.c',
   'mm-cell-info-umts.c',
   'mm-common-helpers.c',
