fibocom: toggle modem power after attach APN
When the attach APN settings are changed, the device will go through a
radio on -> radio off -> radio on cycle so that the new changes are
taken into consideration.

This change is done in a Fibocom-specific MBIM modem implementation
because it's working around a firmware bug that would prevent for the
attach settings to be considered automatically.

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -697,6 +697,12 @@ libmm_plugin_fibocom_la_SOURCES = \
 	fibocom/mm-plugin-fibocom.c \
 	fibocom/mm-plugin-fibocom.h \
 	$(NULL)
+if WITH_MBIM
+libmm_plugin_fibocom_la_SOURCES += \
+	fibocom/mm-broadband-modem-mbim-xmm-fibocom.c \
+	fibocom/mm-broadband-modem-mbim-xmm-fibocom.h \
+	$(NULL)
+endif
 libmm_plugin_fibocom_la_CPPFLAGS = \
 	$(PLUGIN_COMMON_COMPILER_FLAGS) \
 	$(XMM_COMMON_COMPILER_FLAGS) \
