--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -900,6 +900,7 @@ endif
 
 libmm_plugin_intel_la_CPPFLAGS = \
 	$(PLUGIN_COMMON_COMPILER_FLAGS) \
+	$(XMM_COMMON_COMPILER_FLAGS) \
 	-DMM_MODULE_NAME=\"intel\" \
 	$(NULL)
 libmm_plugin_intel_la_LDFLAGS  = $(PLUGIN_COMMON_LINKER_FLAGS)
