dispatcher: new generic object to handle script dispatchers
Based on the FCC unlock specific one, but without any FCC unlock
specific constraint.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -313,6 +313,8 @@ ModemManager_SOURCES = \
 	mm-private-boxed-types.c \
 	mm-auth-provider.h \
 	mm-auth-provider.c \
+	mm-dispatcher.h \
+	mm-dispatcher.c \
 	mm-fcc-unlock-dispatcher.h \
 	mm-fcc-unlock-dispatcher.c \
 	mm-filter.h \
