plugins: Fix port enums includes
The `broadmobi`, `dlink`, `telit` and `tplink` plugins include the
`mm-port-enums-types.h` header. However, they do not use any symbol
defined there.

The `huawei` plugin as includes the `mm-port-enums-types.h` header
but it does not include the build targets as dependencies.

These issues have been fixed by removing the unnecessary includes
from `broadmobi`, `dlink`, `telit` and `tplink` plugins and by
including the enums build target in the `huawei` target.

--- a/src/meson.build
+++ b/src/meson.build
@@ -147,15 +147,15 @@ endif
 
 enums_types = 'mm-port-enums-types'
 
-enums_sources = []
-enums_sources += gnome.mkenums(
+port_enums_sources = []
+port_enums_sources += gnome.mkenums(
   enums_types + '.c',
   sources: headers,
   c_template: build_aux_dir / enums_types + '.c.template',
   fhead: '#include "mm-port-enums-types.h"',
 )
 
-enums_sources += gnome.mkenums(
+port_enums_sources += gnome.mkenums(
   enums_types + '.h',
   sources: headers,
   h_template: build_aux_dir / enums_types + '.h.template',
@@ -165,13 +165,13 @@ enums_sources += gnome.mkenums(
 
 libport = static_library(
   'port',
-  sources: sources + enums_sources,
+  sources: sources + port_enums_sources,
   include_directories: top_inc,
   dependencies: deps + private_deps,
 )
 
 libport_dep = declare_dependency(
-  sources: enums_sources[1],
+  sources: port_enums_sources[1],
   include_directories: '.',
   dependencies: deps,
   link_with: libport,
