fibocom: new shared interface for common logic
The set_initial_eps_bearer_settings() operation is the same in XMM
capable and generic MBIM modem objects. Place it in a common shared
interface so that we don't duplicate code.

--- a/configure.ac
+++ b/configure.ac
@@ -513,7 +513,8 @@ MM_ENABLE_PLUGIN([dell],
                   with_shared_foxconn])
 MM_ENABLE_PLUGIN([dlink])
 MM_ENABLE_PLUGIN([fibocom],
-                 [with_shared_xmm])
+                 [with_shared_fibocom,
+                  with_shared_xmm])
 MM_ENABLE_PLUGIN([foxconn],
                  [with_shared_foxconn])
 MM_ENABLE_PLUGIN([gosuncn])
@@ -565,6 +566,7 @@ MM_BUILD_SHARED([novatel])
 MM_BUILD_SHARED([xmm])
 MM_BUILD_SHARED([telit])
 MM_BUILD_SHARED([foxconn])
+MM_BUILD_SHARED([fibocom])
 
 dnl-----------------------------------------------------------------------------
 dnl Output
